--- a/frontend/src/components/routes/organizer/Settings/Settings.module.scss
+++ b/frontend/src/components/routes/organizer/Settings/Settings.module.scss
@@ -1,24 +1,3 @@
-.container {
-  display: flex;
-  flex-direction: row;
-  position: relative;
-
-  .setting {
-    flex: 1;
-  }
-
-  .preview {
-    overflow: hidden;
-    //position: sticky;
-
-    div:first-child{
-      transform: scale(0.4);
-      overflow: hidden;
-      transform-origin: 0 0;
-    }
-  }
-}
-
 .settingsWrapper {
   container-type: inline-size;
   container-name: settings;
